Updated Customers API
